sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:9: error: ambiguous reference to overloaded definition,
both method | in class Int of type (x: Char)Int
and  method | in class Int of type (x: Short)Int
match expected type ?
			if (ecart=10 | ecart=9) {
                                     ^AlgCombSort11:9: error: type mismatch;
 found   : Unit
 required: Boolean
			if (ecart=10 | ecart=9) {
                                 ^